--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <head>
         <meta charset="UTF-8"> 
         <title>Barbería Alura</title>
-        <link rel="stylesheet" href="Home/reset.css">
-        <link rel="stylesheet" href="Home/style.css">
+        <link rel="stylesheet" href="Oracle/Home/reset.css">
+        <link rel="stylesheet" href="Oracle/Home/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
     </head>
 
